# BuildingAgent

./: .env.example  .gitignore  AGENTS.md  M002_COMPLETION_REPORT.md  README.md  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.gsd/: CODEBASE.md  DECISIONS.md  PREFERENCES.md  PROJECT-DRAFT.md  PROJECT.md  QUEUE-ORDER.json  REQUIREMENTS-DRAFT.md  REQUIREMENTS.md  STATE.md  doctor-history.jsonl  event-log.jsonl  github-sync.json  gsd.db  gsd.db-shm  gsd.db-wal  last-snapshot.md  metrics.json  notifications.jsonl  state-manifest.json
app/: __init__.py
apps/: __init__.py
backend/: README.md  openapi.json
buildingagent/: __init__.py
cli/: pyproject.toml
cli/buildingagent_cli/: __init__.py  client.py  main.py  session.py
cli/pytest/: __init__.py  __main__.py
cli/tests/: test_cli_auth_project_chat.py
docs/: API_CONTRACT.md  AUTH_ACCESS_CONTROL_SPEC.md  CLI_SPEC.md  DEVELOPMENT_PLAN.md  EMAIL_GATEWAY_SPEC.md  ENTRYPOINTS_SPEC.md  GSD2_WORKFLOW.md  HERMES_REPLICATION_STRATEGY.md  ISSUE_BACKLOG.md  LICENSE_ATTRIBUTION_PLAN.md  M003_HERMES_MIGRATION_PLAN.md  MEMORY_SPEC.md  MODEL_CONFIGURATION_SPEC.md  PRODUCT_ARCHITECTURE.md  PRODUCT_REQUIREMENTS.md  PROJECT_MODEL_SPEC.md  RUNTIME_SPEC.md  SKILL_SYSTEM_SPEC.md  TOOL_SYSTEM_SPEC.md  WEB_UI_PLAN.md  WHATSAPP_GATEWAY_SPEC.md  workflow.md  前端接口更新说明.md
pytest/: __init__.py  __main__.py
scripts/: regenerate_kb_catalog_summary.py  requirements-chart.txt  run-api-tests.cjs  run-tests.cjs  run_s01_checks.py  server-import-data.sh  setup-git-github-mirror.sh  setup-github-labels.sh  (+3 more)
(+869 files in other folders)
