[project]
name = "buildingagent"
version = "0.1.0"
description = "BuildingAgent API and application foundation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2,<3",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
